# pyconar-intro-dask

./: Intro a Dask - PyConAr2021.ipynb  README.md  pyproject.toml
data/people/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
