[tool.poetry]
name = "intro-dask"
version = "0.1.0"
description = "Charla 'Intro a Dask' en la pyconar 2021"
authors = ["Matu Varela <matu.varela@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.9,<3.11"
jupyter = "^1.0.0"
numpy = "^1.21.2"
pandas = "^1.3.2"
jupyterlab = "^3.1.10"
dask = {extras = ["complete"], version = "^2021.9.1"}
dask-labextension = "^5.1.0"
distributed = "^2021.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
